--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 안녕하세요? <br/> 웹프로그래밍 수업시간입니다.
+3학년 7반<br/><h1>이기준</h1>
+<br/>
+<a href="http://www.youtube.com"><img src="image/1.jpeg" wiath="32%"/></a><br/>
+
+<img src="image/1.jpeg" wiath="32%"/>
+<img src="image/2.jpg" wiath="32%"/>
+<img src="image/3.jpg" wiath="32%"/>
