--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
-안녕하세요? <br/> 웹프로그래밍 수업시간입니다.
-3학년 7반<br/><h1>이기준</h1>
-<br/>
-<a href="http://www.youtube.com"><img src="image/1.jpeg" wiath="32%"/></a><br/>
-
-<img src="image/1.jpeg" wiath="32%"/>
-<img src="image/2.jpg" wiath="32%"/>
-<img src="image/3.jpg" wiath="32%"/>
+<html>
+     <head></head>
+     <body>
+         <h2>ilsanconvention</h2>
+         <p>
+            102<br/>
+            290<br/>
+            145<br/>
+            게시물<br/>
+            팔로워<br/>
+            팔로잉
+        </p>
+        <p>
+            <strong>
+                 일산국제컨벤션고등학교
+            </strong><br/>
+            전국 1위 ! 경영 , 관광 , 패션 , IT, 디자인 선도 특성화고등학교 !<br/>
+            www.ilsan.hs.kr/
+        </p>
+        <p>프로필편집</p>
+    </body>
+ <html>
+            
